--- a/src/components/AuthNav/AuthNav.module.css
+++ b/src/components/AuthNav/AuthNav.module.css
@@ -1,11 +1,19 @@
+.container {
+  display: flex;
+  gap: 20px;
+  justify-content: end;
+  top: 0;
+  right: 0;
+  position: absolute;
+}
+
 .link {
-    display: inline-block;
-    text-decoration: none;
-    padding: 12px;
-    font-weight: 700;
-    color: #2a363b;
-  }
-  
-  .link.active {
-    color: #e84a5f;
-  }
+  text-decoration: none;
+  padding: 12px;
+  font-weight: 700;
+  color: #2a363b;
+}
+
+.link.active {
+  color: #e84a5f;
+}
